feat(call-tree): add entrypoints drop down
