# internal/api/oas_client_gen.go
@@ -31,6 +31,10 @@ type Invoker interface {
 	//
 	// GET /astPretty
 	AstPrettyGet(ctx context.Context, params AstPrettyGetParams) (*AstPrettyGetOK, error)
+	// CallTreeAvailableEntrypointsGet invokes GET /callTree/availableEntrypoints operation.
+	//
+	// GET /callTree/availableEntrypoints
+	CallTreeAvailableEntrypointsGet(ctx context.Context, params CallTreeAvailableEntrypointsGetParams) (*CallTreeAvailableEntrypointsGetOK, error)
 	// CallTreeGet invokes GET /callTree operation.
 	//
 	// GET /callTree
@@ -340,6 +344,126 @@ func (c *Client) sendAstPrettyGet(ctx context.Context, params AstPrettyGetParams
 
 	stage = "DecodeResponse"
 	result, err := decodeAstPrettyGetResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// CallTreeAvailableEntrypointsGet invokes GET /callTree/availableEntrypoints operation.
+//
+// GET /callTree/availableEntrypoints
+func (c *Client) CallTreeAvailableEntrypointsGet(ctx context.Context, params CallTreeAvailableEntrypointsGetParams) (*CallTreeAvailableEntrypointsGetOK, error) {
+	res, err := c.sendCallTreeAvailableEntrypointsGet(ctx, params)
+	return res, err
+}
+
+func (c *Client) sendCallTreeAvailableEntrypointsGet(ctx context.Context, params CallTreeAvailableEntrypointsGetParams) (res *CallTreeAvailableEntrypointsGetOK, err error) {
+	otelAttrs := []attribute.KeyValue{
+		semconv.HTTPMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/callTree/availableEntrypoints"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, "CallTreeAvailableEntrypointsGet",
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/callTree/availableEntrypoints"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeQueryParams"
+	q := uri.NewQueryEncoder()
+	{
+		// Encode "policy" parameter.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "policy",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			return e.EncodeValue(conv.StringToString(params.Policy))
+		}); err != nil {
+			return res, errors.Wrap(err, "encode query")
+		}
+	}
+	u.RawQuery = q.Values().Encode()
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	{
+		type bitset = [1]uint8
+		var satisfied bitset
+		{
+			stage = "Security:BearerAuth"
+			switch err := c.securityBearerAuth(ctx, "CallTreeAvailableEntrypointsGet", r); {
+			case err == nil: // if NO error
+				satisfied[0] |= 1 << 0
+			case errors.Is(err, ogenerrors.ErrSkipClientSecurity):
+				// Skip this security.
+			default:
+				return res, errors.Wrap(err, "security \"BearerAuth\"")
+			}
+		}
+
+		if ok := func() bool {
+		nextRequirement:
+			for _, requirement := range []bitset{
+				{0b00000001},
+			} {
+				for i, mask := range requirement {
+					if satisfied[i]&mask != mask {
+						continue nextRequirement
+					}
+				}
+				return true
+			}
+			return false
+		}(); !ok {
+			return res, ogenerrors.ErrSecurityRequirementIsNotSatisfied
+		}
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeCallTreeAvailableEntrypointsGetResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
